--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,9 +33,11 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Interfazbanco
 excludes=
+file.reference.Desktop-mysql-connector-j-9.3.0=C:\\Users\\Alumno\\Desktop\\mysql-connector-j-9.3.0
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.Desktop-mysql-connector-j-9.3.0}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
