--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,13 +37,15 @@ endorsed.classpath=
 excludes=
 file.reference.Desktop-mysql-connector-j-9.3.0=C:\\Users\\Alumno\\Desktop\\mysql-connector-j-9.3.0
 file.reference.Downloads-mysql-connector-j-9.4.0=C:\\Users\\julio\\Downloads\\mysql-connector-j-9.4.0
+file.reference.mysql-connector-j-9.3.0.jar=C:\\Users\\Alumno\\Desktop\\mysql-connector-j-9.3.0\\mysql-connector-j-9.3.0.jar
 file.reference.mysql-connector-j-9.4.0.jar=C:\\Users\\julio\\Downloads\\mysql-connector-j-9.4.0\\mysql-connector-j-9.4.0\\mysql-connector-j-9.4.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.Desktop-mysql-connector-j-9.3.0}:\
     ${file.reference.Downloads-mysql-connector-j-9.4.0}:\
-    ${file.reference.mysql-connector-j-9.4.0.jar}
+    ${file.reference.mysql-connector-j-9.4.0.jar}:\
+    ${file.reference.mysql-connector-j-9.3.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
